--- a/Presentation/Aldan.Web/Views/User/PasswordRecoveryConfirm.cshtml
+++ b/Presentation/Aldan.Web/Views/User/PasswordRecoveryConfirm.cshtml
@@ -2,7 +2,7 @@
 
 <div class="page password-recovery-page">
     <div class="page-title">
-        <h1>Account.PasswordRecovery</h1>
+        <h1>Password кecovery</h1>
     </div>
     <div class="page-body">
         @if (!string.IsNullOrEmpty(Model.Result))
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="buttons">
-                    <input type="submit" name="set-password" class="button-1 new-password-button" value="Account.PasswordRecovery.ChangePasswordButton" />
+                    <input type="submit" name="set-password" class="button-1 new-password-button" value="Recover" />
                 </div>
             </form>
         }
