--- a/Presentation/Aldan.Web/Views/User/ChangePassword.cshtml
+++ b/Presentation/Aldan.Web/Views/User/ChangePassword.cshtml
@@ -2,7 +2,7 @@
 
 <div class="page account-page change-password-page">
     <div class="page-title">
-        <h1>Account.MyAccount Account.ChangePassword</h1>
+        <h1>Change password</h1>
     </div>
     <div class="page-body">
         @if (!string.IsNullOrEmpty(Model.Result))
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="buttons">
-                <input type="submit" class="button-1 change-password-button" value="Account.ChangePassword.Button" />
+                <input type="submit" class="button-1 change-password-button" value="Change password" />
             </div>
         </form>
     </div>
