--- a/Presentation/Aldan.Web/Views/User/PasswordRecovery.cshtml
+++ b/Presentation/Aldan.Web/Views/User/PasswordRecovery.cshtml
@@ -2,7 +2,7 @@
 
 <div class="page password-recovery-page">
     <div class="page-title">
-        <h1>Account.PasswordRecovery</h1>
+        <h1>Password recovery</h1>
     </div>
     <div class="page-body">
         @if (!string.IsNullOrEmpty(Model.Result))
@@ -13,7 +13,7 @@
         }
         <form asp-route="PasswordRecovery" method="post">
             <div asp-validation-summary="ModelOnly" class="message-error"></div>
-            <p class="tooltip">Account.PasswordRecovery.Tooltip</p>
+            <p class="tooltip">Please enter your email address below. You will receive a link to reset your password.</p>
             <div class="fieldset">
                 <div class="form-fields">
                     <div class="inputs">
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="buttons">
-                <input type="submit" name="send-email" class="button-1 password-recovery-button" value="Account.PasswordRecovery.RecoverButton" />
+                <input type="submit" name="send-email" class="button-1 password-recovery-button" value="Recover" />
             </div>
         </form>
     </div>
