--- a/Presentation/Aldan.Web/Views/User/RegisterResult.cshtml
+++ b/Presentation/Aldan.Web/Views/User/RegisterResult.cshtml
@@ -2,11 +2,11 @@
     <div asp-validation-summary="ModelOnly" class="message-error"></div>
     <div class="page registration-result-page">
         <div class="page-title">
-            <h1>Account.Register</h1>
+            <h1>Register</h1>
         </div>
         <div class="page-body">
             <div class="buttons">
-                <input type="submit" name="register-continue" class="button-1 register-continue-button" value="Account.Register.Result.Continue" />
+                <input type="submit" name="register-continue" class="button-1 register-continue-button" value="Continue" />
             </div>
         </div>
     </div>
