--- a/Presentation/Aldan.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Presentation/Aldan.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -69,6 +69,7 @@
     <script src="~/lib/datatables/dataTables.buttons.min.js"></script>
     <script src="~/lib/datatables/buttons.bootstrap.min.js"></script>
     <script src="~/lib/chartjs/Chart.min.js"></script>
+    <script src="~/lib/tinymce/tinymce.min.js"></script>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
 <div class="throbber">
