--- a/Presentation/Aldan.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Presentation/Aldan.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -13,6 +13,8 @@
 @using Aldan.Web.Areas.Admin.Models.Logging
 @using Aldan.Web.Areas.Admin.Models.Users
 @using Aldan.Web.Areas.Admin.Models.Common
+@using Aldan.Web.Areas.Admin.Models.Messages
+@using Aldan.Web.Areas.Admin.Models.Settings
 @using Aldan.Web.Framework
 @using Aldan.Web.Framework.Models
 @using Aldan.Web.Framework.Events
