--- a/Presentation/Aldan.Web/Views/Shared/_Layout.cshtml
+++ b/Presentation/Aldan.Web/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
 </head>
 <body>
 <header>
+    @await Component.InvokeAsync("AdminHeaderLinks")
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
             <div class="navbar-header">
