--- a/Presentation/Aldan.Web/wwwroot/css/site.css
+++ b/Presentation/Aldan.Web/wwwroot/css/site.css
@@ -69,3 +69,26 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.admin-header-links {
+  background-color: #333;
+  text-align: center;
+  color: #eee;
+}
+.admin-header-links * {
+  display: inline-block;
+  margin: 0 10px;
+  line-height: 35px;
+  font-size: 12px;
+  font-weight: bold;
+}
+.admin-header-links .impersonate {
+  display: inline-block;
+}
+.admin-header-links .impersonate a {
+  background-color: #555;
+  padding: 0 15px;
+}
+.admin-header-links .impersonate a:hover {
+  background-color: #666;
+}
